--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,7 @@
             <table class="table table-bordered mt-5">
                 <thead>
                     <tr>
+                        <th>sno</th>
                         <th>id</th>
                         <th>title</th>
                         <th>author</th>
